--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,10 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/femme"
+        android:icon="@drawable/exam"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@drawable/femme"
+        android:roundIcon="@drawable/exam"
         android:supportsRtl="true"
         android:theme="@style/Theme.Professeur"
         tools:targetApi="31">
